--- a/ordering.html
+++ b/ordering.html
@@ -44,7 +44,7 @@
           <li> ◆Enjoy the best food delivery service in town. Whether you want pizza, pasta, biryani, or sushi, we have it all.</li>
           <li> ◆Satisfy your taste buds with our amazing food options. Order online and get ready to feast on your favorite food. </b></li>
         </ul>
-        <a class="a" href="rest.html">
+        <a class="a" href="restaurant.html">
           <button class ="btn mt-5" onclick= " orderhere">Order Now</button> 
         </a>
       </div>
