--- a/About.html
+++ b/About.html
@@ -271,7 +271,7 @@ footer {
   width: 150px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
   margin-right: 10px; /* Add margin at the right for spacing */
-  margin-left: 100px; 
+  margin-left: 10px; 
 }
     </style>
 </head>
@@ -316,9 +316,8 @@ footer {
             <div class="footer_container">
                 <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
                   <div class="col mb-3">
-                    <img src="C:\Users\Amrit Joshi\OneDrive\Desktop\Tech\Food-Ordering-Site-main\logowhite.png" alt="Footer Logo">
-                      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                    </a>
+                    <img src="logowhite.png" alt="Footer Logo">
+                      
                     <p class="text-body-secondary">© 2024 FOOODIES.pvt.ltd</p>
                   </div>
               
