--- a/menu1.html
+++ b/menu1.html
@@ -286,6 +286,52 @@ footer {
     color: #fff;
     padding: 10px 0;
 }
+@media (max-width: 600px) {
+    .restaurant-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+    }
+    .restaurant-card{
+        backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(137, 160, 203, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+        height:180px;
+        width: 130px;
+        margin-left: 30px;
+    }
+    .restaurant-info h2{
+        font-size: 10px;
+    }
+    .restaurant-info{
+        font-size: 20%;
+    }
+    .restaurant-image{
+        height: 80px;
+        width: 100%;
+    }
+
+    .white-rectangle{
+        margin: 17px 10px 10px 10px;
+    }
+    .menu{
+        height: auto;
+        width: 90%;
+        display: block;
+    }
+    .third{
+        height: auto;
+    }
+    .footer_logo{
+        height: 10px;
+        width: 10px;
+    }
+    .heading{
+        font-size: 20px;
+    }
+}
 
 </style>
 <body>
@@ -688,7 +734,7 @@ footer {
     <div class="footer_container">
         <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
           <div class="col mb-3">
-                <img  class="logo" style="height: 200px; width: 200px;" src="logowhite.png" alt="logo of FOOODIES">
+                <img  class=" footer_logo" style="height: 200px; width: 200px;" src="logowhite.png" alt="logo of FOOODIES">
             <p class="text-body-secondary" style="text-align: center;font-size: 30px;">© 2024 FOOODIES.pvt.ltd</p>
           </div>
 
