--- a/delivery_page.html
+++ b/delivery_page.html
@@ -168,7 +168,7 @@ footer {
 
     </div>
     <section>
-            <div class="teacker">
+            <div class="tracker">
                     <!-- here we will integrate tracking Api -->
             </div>
     </section>
