--- a/delivery_page.html
+++ b/delivery_page.html
@@ -6,40 +6,73 @@
     <title>Dekivery Page</title>
 </head>
 <style>
-.navbar{
-    margin:0px -8px -8px -8px;
-    background-color: rgba(33, 31, 31, 0.74);
-    position: fixed;
-    padding: 20px 20px 20px 20px;
-    width: 100%;
+  body{
+    overflow: scroll;
+  }
+header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(255, 255, 255, 0.5); /* Use rgba to specify color with alpha channel (transparency) */
+        padding: 2rem 9%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000;
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+        }
+header .logo{
+    font-size: 3rem;
+    color:rgb(0, 0, 0);
+    font-weight: bolder;
 }
-.navbar ul img{
-    float: left;
-    height: 100px;
+.logo {
+            font-size: 2rem;
+            color: #000;
+            font-weight: bolder;
+        }
+header .logo span{
+    color:var(--green);
 }
-.navbar ul{
-    overflow:auto;
-    margin:0px 0px 0px 0px;
-
+.navbar {
+            display: flex;
+            align-items: center;
+        }
+header .navbar a{
+    font-size: 2rem;
+    padding:0 1.5rem;
+    color:rgb(0, 0, 0);
+    margin-left: 2rem;
+    text-decoration: none;
 }
-.navbar li{
-    float:right;
-    list-style:none;
-    margin:13px 20px;
-    color: aliceblue;
-    
+header .navbar a:hover{
+    color:var(--green);
 }
-.navbar li a{
-    text-decoration:none;
-    padding:3px 3px;
-    color:rgb(187, 219, 152);
-    font-size: 30px;
-    text-align: row-reverse;
+header .icons a{
+    font-size: 2.5rem;
+    color:rgb(0, 0, 0);
+    margin-left: 1.5rem;
+}
+header .icons a:hover{
+    color:var(--green);
+}
+header #toggler{
+    display: none;
+}
+header .fa-bars{
+    font-size: 3rem;
+    color: #000;
+    border-radius: .5rem;
+    padding: .5rem 1.5rem;
+    cursor: pointer;
+    border: 1px solid rgba(0,0,0,.3);
+    display: none;
 }
 .container{
-    background-image:url('https://wallpapercave.com/wp/wp9919642.jpg') ;
-    background-size: auto;
-    background-repeat: repeat-x;
+    background-image:url(https://img.freepik.com/premium-vector/online-delivery-service-conceptperfect-landing-page-delivery-website-banner-background_107661-98.jpg) ;
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 1000px;
     width: auto;
     padding-top:200px ;
@@ -140,19 +173,16 @@ footer {
   margin-left: 10px; 
 }
 .content{
-    width: 80rem; /* Can be in percentage also. */
-    height: 50rem;
+    width: 60rem; /* Can be in percentage also. */
+    height: 40rem;
     margin: 0 auto auto;
     position: relative;
-background: rgba(216, 111, 109, 0.31);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(3.5px);
--webkit-backdrop-filter: blur(3.5px);
-border: 1px solid rgba(181, 71, 69, 0.37);
+
 }
-.form {
-  background: #0c0f14;
+.form {background: rgba(12, 14, 12, 0.532);
+  backdrop-filter: blur(3.5px);
+-webkit-backdrop-filter: blur(3.5px);
+border: 1px solid rgba(0, 0, 0, 0.334);
   box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01),
     0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09),
     0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
@@ -161,7 +191,7 @@ border: 1px solid rgba(181, 71, 69, 0.37);
   display: flex;
   flex-direction: column;
   gap: 15px;
-  margin: 10rem 20rem 10rem 15rem;
+  margin: 5rem 5rem 5rem 5rem;
   padding: 20px;
   position: relative;
   border-radius: 25px;
@@ -181,8 +211,8 @@ border: 1px solid rgba(181, 71, 69, 0.37);
 .form .label .title {
   padding: 0 10px;
   transition: all 300ms;
-  font-size: 12px;
-  color: #8b8e98;
+  font-size: 16px;
+  color: #d7d9dd;
   font-weight: 600;
   width: -moz-fit-content;
   width: fit-content;
@@ -191,17 +221,19 @@ border: 1px solid rgba(181, 71, 69, 0.37);
   left: 15px;
   background: #0c0f14;
 }
-.form .input-field {
+.input-field {
   width: auto;
+  color: rgb(178, 171, 171);
   height: 50px;
   text-indent: 15px;
   border-radius: 15px;
+  font-size: 20px;
   outline: none;
   background-color: transparent;
   border: 1px solid #21262e;
   transition: all 0.3s;
   caret-color: #d17842;
-  color: #aeaeae;
+  color: #1e1c1c;
 }
 
 .form .input-field:hover {
@@ -211,6 +243,9 @@ border: 1px solid rgba(181, 71, 69, 0.37);
 .form .input-field:focus {
   border-color: #d17842;
 }
+::placeholder {
+      color: rgb(174, 208, 122); /* Change this to the desired color */
+    }
 .form .split {
   display: flex;
   flex-direction: row;
@@ -305,20 +340,17 @@ border: 1px solid rgba(181, 71, 69, 0.37);
 
 </style>
 <body>
-    <section class="nav">
-        <nav class="navbar">
-            
-            <ul>
-                <img src="logowhite.png" alt="logo foodies">
-                <div>
-                <li><a href="ordering.html" ><b>Home</b></a></lI>
-                <li><a href="menu.html" ><b>Menu</b></a></li>
-                <li><a href="about.html"><b>About</b>
-                </a></li>
-                <li><a href="contact.html"><b>Contact</b></a></li>
-                </div>
-            </ul>
-        </nav>
+  <header>
+    <input type="checkbox" name="" id="toggler">
+    <label for="toggler" class="fas fa-bars"></label>
+    <div class="logo"><span>FOODIES!</span></div>
+<nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#dishes">Menu</a>
+    <a href="#contact">Contact Us</a>
+</nav>
+</header>
 
     </section>
     <div class="container">
