--- a/menu1.html
+++ b/menu1.html
@@ -197,11 +197,10 @@ h1{
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 450px;
+  height: 250px; /* Adjusted height for smaller screens */
   position: absolute;
   margin-bottom: 5px;
   background-color: #394047; /* Light gray background */
-
 }
 h5{
     font-size: 2rem;
@@ -324,10 +323,21 @@ footer {
     .third{
         height: auto;
     }
-    .footer_logo{
-        height: 10px;
-        width: 10px;
-    }
+    .footer_container {
+    height: auto; /* Auto height for smaller screens */
+    padding-top: 20px; /* Adjusted padding */
+    padding-bottom: 20px; /* Adjusted padding */
+  }
+
+  /* Adjusted styles for smaller screens */
+  .footer_container .col {
+    margin-bottom: 0.5rem;
+  }
+
+  .footer_container .py-5 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
     .heading{
         font-size: 20px;
     }
