--- a/About.html
+++ b/About.html
@@ -405,6 +405,12 @@ footer {
     <div class="divider"></div>
     <section
         class="team">
+        <h1 class="section-heading">Our Team</h1>
+    <div class="container">
+      <!-- <div class="profile">
+          <img src="path" alt=""/><span class="name">name</span>
+        </div> -->
+  </section>
     <h1 class="section-heading">Our😎Team</h1>
   
     </section>
