edited main pages

--- a/delivery_page.html
+++ b/delivery_page.html
@@ -23,7 +23,7 @@ header {
         box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
         }
 header .logo{
-    font-size: 3rem;
+    font-size: 2rem;
     color:rgb(0, 0, 0);
     font-weight: bolder;
 }
@@ -40,7 +40,7 @@ header .logo span{
             align-items: center;
         }
 header .navbar a{
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding:0 1.5rem;
     color:rgb(0, 0, 0);
     margin-left: 2rem;
@@ -73,8 +73,8 @@ header .fa-bars{
     background-image:url(https://img.freepik.com/premium-vector/online-delivery-service-conceptperfect-landing-page-delivery-website-banner-background_107661-98.jpg) ;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 1000px;
-    width: auto;
+    height: 700px;
+    width: 100%;
     padding-top:200px ;
     margin: -10px -10px -10px -10px;
 }
@@ -186,8 +186,9 @@ border: 1px solid rgba(0, 0, 0, 0.334);
   box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01),
     0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09),
     0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-  width: 45rem; 
+  width: 35rem; 
   position: relative;
+  margin-left: 300px;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -283,6 +284,9 @@ border: 1px solid rgba(0, 0, 0, 0.334);
   color: #d17842;
   border: 2px solid #d17842;
   background: transparent;
+}
+.add-card{
+  padding-left: 90px;
 }
 /* Add this CSS at the end of your existing CSS */
 
