--- a/About.html
+++ b/About.html
@@ -370,10 +370,10 @@ footer {
         <label for="toggler" class="fas fa-bars"></label>
         <div class="logo"><span>FOODIES!</span></div>
     <nav class="navbar">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#dishes">Menu</a>
-        <a href="#contact">Contact Us</a>
+        <a href="ordering.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="menu1.html">Menu</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
 </header>
     <section class="about" id="about">
@@ -389,7 +389,7 @@ footer {
                 <p><b>◆ No matter your craving, whether it's pizza, pasta, biryani, or sushi, we have an extensive menu to satisfy your taste buds.</b></p>
                 <p><b>◆ Our mission is to make ordering food online easy and enjoyable. Just select your location, choose from our mouth-watering dishes, and get ready to feast!</b></p>
         
-                <a href="#" class="btn">ORDER NOW </a>
+                <a href="restaurant.html" class="btn">ORDER NOW </a>
             </div>
         </div>
     </section>
