--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ button.btn.mt-5 {
         <nav class="navbar">
             <ul>
                 <li><a href="ordering.html" ><b>Home</b></a></lI>
-                <li><a href="menu.html" ><b>Menu</b></a></li>
-                <li><a href="about.html"><b>About</b>
+                <li><a href="menu1.html" ><b>Menu</b></a></li>
+                <li><a href="About.html"><b>About</b>
                 </a></li>
                 <li><a href="contact.html"><b>Contact</b></a></li>
 
@@ -377,7 +377,7 @@ button.btn.mt-5 {
           <li> <b>◆Enjoy the best food delivery service in town. Whether you want pizza, pasta, biryani, or sushi, we have it all.</b></li><br>
           <li> <b>◆Satisfy your taste buds with our amazing food options. Order online and get ready to feast on your favorite food. </b></li><br>
         </ul>
-        <a class="a" href="rest.html">
+        <a class="a" href="restaurant.html">
           <button class ="btn mt-5" onclick= " orderhere">Order Now</button> 
         </a>
       </div>
