--- a/confirm.html
+++ b/confirm.html
@@ -144,8 +144,8 @@ footer {
             <p>Want to explore more</p>
 
             <a class="Order Again"
-            href="rest.html">
-            <button id="order-again-btn">Order Again</button> </a>
+            href="index.html">
+            <button id="order-again-btn">Add Delivery Details</button> </a>
 
             <a class ="Menu">
                 <a href="menu.html">
