--- a/delivery_page.html
+++ b/delivery_page.html
@@ -396,7 +396,8 @@ border: 1px solid rgba(0, 0, 0, 0.334);
                     </label>
                     
                   </div>
-                  <input class="checkout-btn" type="button" value="Submit" />
+                  <a href="confirm.html">
+                  <input  class="checkout-btn" type="button" value="Submit" /></a>
                 </form>
               </section>
         </div>
