--- a/payment.html
+++ b/payment.html
@@ -331,7 +331,7 @@ footer {
                                             <b><hr></b>
             </div>
         </div>
-        <a href="confirm.html">
+        <a href="delivery_page.html">
 
         <button id="checkoutButton">Proceed to Checkout</button></a>
 
