--- a/About.html
+++ b/About.html
@@ -370,7 +370,7 @@ footer {
         <label for="toggler" class="fas fa-bars"></label>
         <div class="logo"><span>FOODIES!</span></div>
     <nav class="navbar">
-        <a href="ordering.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="About.html">About</a>
         <a href="menu1.html">Menu</a>
         <a href="contact.html">Contact Us</a>
