--- a/menu1.html
+++ b/menu1.html
@@ -327,7 +327,7 @@ footer {
             <nav class="navbar">
                 <ul>
                     <img src="logowhite.png" alt="logo">
-                    <li><a href="ordering.html" ><b>Home</b></a></lI>
+                    <li><a href="index.html" ><b>Home</b></a></lI>
                     <li><a href="menu.html" ><b>Menu</b></a></li>
                     <li><a href="about.html"><b>About</b>
                     </a></li>
