--- a/payment.html
+++ b/payment.html
@@ -271,10 +271,10 @@ footer {
         <label for="toggler" class="fas fa-bars"></label>
         <div class="logo"><span>FOODIES!</span></div>
     <nav class="navbar">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#dishes">Menu</a>
-        <a href="#contact">Contact Us</a>
+        <a href="index.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="menu1.html">Menu</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
 </header>
 
