--- a/restaurant.html
+++ b/restaurant.html
@@ -258,7 +258,7 @@
 
         <nav>
             <ul>
-                <li><a href="ordering.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu1.html">Menu</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
