--- a/signin.html
+++ b/signin.html
@@ -275,10 +275,10 @@ header{
         </div>
         <div class="nav-menu" id="navMenu">
             <ul>
-                <li><a href="#" class="link active">Home</a></li>
-                <li><a href="#" class="link">Menu</a></li>
-                <li><a href="#" class="link">Services</a></li>
-                <li><a href="#" class="link">About</a></li>
+                <li><a href="index.html" class="link active">Home</a></li>
+                <li><a href="menu1.html" class="link">Menu</a></li>
+                <li><a href="contact.html" class="link">Services</a></li>
+                <li><a href="About.html" class="link">About</a></li>
             </ul>
         </div>
         <div class="nav-button">
