--- a/About.html
+++ b/About.html
@@ -124,7 +124,7 @@ header .fa-bars{
     cursor: pointer;
     border: 1px solid rgba(0,0,0,.3);
     display: none;
-}ss
+}
 /* About us styles */
 .about .row{
     display: flex;
@@ -389,7 +389,7 @@ footer {
                 <p><b>◆ No matter your craving, whether it's pizza, pasta, biryani, or sushi, we have an extensive menu to satisfy your taste buds.</b></p>
                 <p><b>◆ Our mission is to make ordering food online easy and enjoyable. Just select your location, choose from our mouth-watering dishes, and get ready to feast!</b></p>
         
-                <a href="restaurant.html" class="btn">ORDER NOW </a>
+                <a href="#" class="btn">ORDER NOW </a>
             </div>
         </div>
     </section>
@@ -405,13 +405,12 @@ footer {
     <div class="divider"></div>
     <section
         class="team">
-        <h1 class="section-heading">Our Team</h1>
+    <h1 class="section-heading">Our😎Team</h1>
     <div class="container">
       <!-- <div class="profile">
           <img src="path" alt=""/><span class="name">name</span>
         </div> -->
   </section>
-    <h1 class="section-heading">Our😎Team</h1>
   
     </section>
             <div class="footer_container">
@@ -501,8 +500,8 @@ let data = [
 data.forEach(function (obj) {
   let Url = obj.url;
   let Name = obj.name;
-  /* console.log(Url);
-     console.log(Name); */
+  console.log(Url);
+     console.log(Name); 
 
   createCard(Url, Name);
 });
