--- a/payment.html
+++ b/payment.html
@@ -20,7 +20,7 @@ body {
 .heading{
     text-align: center;
     font-size: 3rem;
-    color:rgb(0, 0, 0);
+    color:rgb(214, 212, 212);
     padding:1rem;
     margin:2rem 0;   
 }
@@ -97,7 +97,7 @@ header .navbar a:hover{
 }
 header .icons a{
     font-size: 2.5rem;
-    color:rgb(0, 0, 0);
+    color:rgb(252, 252, 252);
     margin-left: 1.5rem;
 }
 header .icons a:hover{
@@ -108,7 +108,7 @@ header #toggler{
 }
 header .fa-bars{
     font-size: 3rem;
-    color: #000;
+    color: #f2f2f2;
     border-radius: .5rem;
     padding: .5rem 1.5rem;
     cursor: pointer;
