--- a/signin.html
+++ b/signin.html
@@ -282,8 +282,10 @@ header{
             </ul>
         </div>
         <div class="nav-button">
+           
             <button class="btn white-btn" id="loginBtn" onclick="login()">Sign In</button>
             <button class="btn" id="registerBtn" onclick="register()">Sign Up</button>
+        
         </div>
         <div class="nav-menu-btn">
             <i class="bx bx-menu" onclick="myMenuFunction()"></i>
@@ -308,7 +310,8 @@ header{
             </div>
 
             <div class="input-box">
-                <input type="submit" class="submit" value="Sign In">
+                <a href="restaurant.html">
+                <input type="submit" class="submit" value="Sign In"></a>
             </div>
             <div class="two-col">
                 <div class="one">
@@ -346,7 +349,8 @@ header{
                 <i class="bx bx-lock-alt"></i>
             </div>
             <div class="input-box">
-                <input type="submit" class="submit" value="Register">
+                <a href="restaurant.html">
+                <input type="submit" class="submit" value="Register"></a>
             </div>
             <div class="two-col">
                 <div class="one">
