--- a/confirm.html
+++ b/confirm.html
@@ -145,7 +145,7 @@ footer {
 
             <a class="Order Again"
             href="index.html">
-            <button id="order-again-btn">Add Delivery Details</button> </a>
+            <button id="order-again-btn">Order again</button> </a>
 
             <a class ="Menu">
                 <a href="menu.html">
@@ -180,7 +180,7 @@ footer {
         // Add an event listener for the "Order Again" button
         document.getElementById('orderAgainBtn').addEventListener('click', () => {
             // Redirect to the menu page (menu.html)
-            window.location.href = 'menu.html';
+            window.location.href = 'menu1.html';
         });
    
 </script>
