--- a/delivery_page.html
+++ b/delivery_page.html
@@ -260,6 +260,8 @@ border: 1px solid rgba(0, 0, 0, 0.334);
 .form .checkout-btn {
   margin-top: 20px;
   padding: 20px 0;
+  width: 100%;
+  text-decoration: none;
   border-radius: 25px;
   font-weight: 700;
   transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
