--- a/signin.html
+++ b/signin.html
@@ -295,23 +295,23 @@ header{
     <div class="form-box">
         
         <!------------------- login form -------------------------->
-        <div class="login-container" id="login">
+        <div class="login-container" required id="login">
             <div class="top">
                 <span>Don't have an account? <a href="#" onclick="register()">Sign Up</a></span>
                 <header>Login</header>
             </div>
             <div class="input-box">
-                <input type="text" class="input-field" placeholder="Username or Email">
+                <input type="text" class="input-field" required placeholder="Username or Email">
                 <i class="bx bx-user"></i>
             </div>
             <div class="input-box">
-                <input type="password" class="input-field" placeholder="Password">
+                <input type="password" class="input-field" required placeholder="Password">
                 <i class="bx bx-lock-alt"></i>
             </div>
 
             <div class="input-box">
-                <a href="restaurant.html">
-                <input type="submit" class="submit" value="Sign In"></a>
+                <a >
+                <input type="submit"   class="submit" value="Sign In"></a>
             </div>
             <div class="two-col">
                 <div class="one">
@@ -349,7 +349,7 @@ header{
                 <i class="bx bx-lock-alt"></i>
             </div>
             <div class="input-box">
-                <a href="restaurant.html">
+                <a href="">
                 <input type="submit" class="submit" value="Register"></a>
             </div>
             <div class="two-col">
@@ -396,6 +396,7 @@ header{
         x.style.opacity = 0;
         y.style.opacity = 1;
     }
+    get
 </script>
 </body>
 </html>
